Tests and code improvements + introduced assertj 3.25